--- a/src/assets/icons/iconfont.css
+++ b/src/assets/icons/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4948411 */
-  src: url('iconfont.woff2?t=1764691913664') format('woff2'),
-       url('iconfont.woff?t=1764691913664') format('woff'),
-       url('iconfont.ttf?t=1764691913664') format('truetype');
+  src: url('iconfont.woff2?t=1764815654849') format('woff2'),
+       url('iconfont.woff?t=1764815654849') format('woff'),
+       url('iconfont.ttf?t=1764815654849') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-gantanhaozhong:before {
+  content: "\e8e5";
 }
 
 .icon-xiangshang:before {
