--- a/src/assets/icons/iconfont.css
+++ b/src/assets/icons/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4948411 */
-  src: url('iconfont.woff2?t=1765086029671') format('woff2'),
-       url('iconfont.woff?t=1765086029671') format('woff'),
-       url('iconfont.ttf?t=1765086029671') format('truetype');
+  src: url('iconfont.woff2?t=1765113275008') format('woff2'),
+       url('iconfont.woff?t=1765113275008') format('woff'),
+       url('iconfont.ttf?t=1765113275008') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,18 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-arrow-right-s-line:before {
+  content: "\e747";
+}
+
+.icon-youjiantou1:before {
+  content: "\e617";
+}
+
+.icon-youjiantou2:before {
+  content: "\e625";
 }
 
 .icon-xiuxi:before {
