--- a/src/assets/icons/iconfont.css
+++ b/src/assets/icons/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4948411 */
-  src: url('iconfont.woff2?t=1765207506293') format('woff2'),
-       url('iconfont.woff?t=1765207506293') format('woff'),
-       url('iconfont.ttf?t=1765207506293') format('truetype');
+  src: url('iconfont.woff2?t=1765292778916') format('woff2'),
+       url('iconfont.woff?t=1765292778916') format('woff'),
+       url('iconfont.ttf?t=1765292778916') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,38 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-jianhao2:before {
+  content: "\e635";
+}
+
+.icon-jianhao3:before {
+  content: "\eaf5";
+}
+
+.icon-jianhao4:before {
+  content: "\e61c";
+}
+
+.icon-jianhao5:before {
+  content: "\e871";
+}
+
+.icon-jia:before {
+  content: "\e60f";
+}
+
+.icon-jiahao1:before {
+  content: "\e727";
+}
+
+.icon-jiajianzujianjiahao:before {
+  content: "\e64d";
+}
+
+.icon-jiahao3:before {
+  content: "\e611";
 }
 
 .icon-shangchuantuxiang:before {
