--- a/src/assets/icons/iconfont.css
+++ b/src/assets/icons/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4948411 */
-  src: url('iconfont.woff2?t=1765810073048') format('woff2'),
-       url('iconfont.woff?t=1765810073048') format('woff'),
-       url('iconfont.ttf?t=1765810073048') format('truetype');
+  src: url('iconfont.woff2?t=1767623079087') format('woff2'),
+       url('iconfont.woff?t=1767623079087') format('woff'),
+       url('iconfont.ttf?t=1767623079087') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,70 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-weixinliaotian:before {
+  content: "\e628";
+}
+
+.icon-fanhui:before {
+  content: "\e65b";
+}
+
+.icon-weibiaoti--:before {
+  content: "\e62a";
+}
+
+.icon-20gf-bubble4:before {
+  content: "\e939";
+}
+
+.icon-fanhui1:before {
+  content: "\e643";
+}
+
+.icon-haoyou:before {
+  content: "\e7fe";
+}
+
+.icon-xiaoxi:before {
+  content: "\e62b";
+}
+
+.icon-shuyi_liaotian:before {
+  content: "\e661";
+}
+
+.icon-liaotiankuang:before {
+  content: "\e62c";
+}
+
+.icon-xiaoxi1:before {
+  content: "\e781";
+}
+
+.icon-fuzhi:before {
+  content: "\e61d";
+}
+
+.icon-fuzhi1:before {
+  content: "\eac1";
+}
+
+.icon-fuzhi_o:before {
+  content: "\eb4e";
+}
+
+.icon-fuzhi2:before {
+  content: "\e64e";
+}
+
+.icon-fuzhi-:before {
+  content: "\e648";
+}
+
+.icon-fuzhi3:before {
+  content: "\e65f";
 }
 
 .icon-cuowu:before {
